--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.co
-m/apk/res-auto">
-
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/create"
-        android:icon="@android:drawable/ic_menu_add"
-        android:onClick="nowyWpis"
         android:title="Nowy"
-        app:showAsAction="always" />
-
+        android:onClick="nowyWpis"
+        android:icon="@android:drawable/ic_menu_add"
+        app:showAsAction="always"/>
 </menu>
